[package]

name = "fingertree"
version = "0.0.1"
authors = [ "Darin Morrison <darinmorrison+epsilonz@gmail.com>" ]
description = "Finger Trees in Rust"
documentation = "http://www.rust-ci.org/epsilonz/fingertree.rs/doc/fingertree/"
keywords = ["data-structures", "persistent", "sequences", "trees"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/epsilonz/fingertree.rs"

[lib]
name = "fingertree"
path = "src/lib.rs"

[dependencies.epsilonz_algebra]
git = "https://github.com/epsilonz/algebra.rs"
