[package]

name = "fingertree"
version = "0.0.1"
authors = [ "Darin Morrison <darinmorrison+epsilonz@gmail.com>" ]
description = "Finger Trees in Rust"
documentation = "http://www.rust-ci.org/epsilonz/fingertree.rs/doc/fingertree/"
keywords = ["data-structures", "persistent", "sequences", "trees"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/epsilonz/fingertree.rs"

[lib]
name = "fingertree"
path = "src/lib.rs"

[[bin]] 
name="test"

[dependencies]
kinder = "*"
serde_json = "0.8"
serde_derive = "0.8"
serde = "0.8"
pretty="0.2"